# trash_classify

./: .gitignore  Untitled.ipynb  comparing_images.ipynb  download_dataset.py  fine-tuning.ipynb  main.py  pyproject.toml  test.py  training.ipynb
tnsboard/trashnet/: events.out.tfevents.1765434649.297f7d231062.5149.0  events.out.tfevents.1765524622.5d6641d11982.2157.0
